<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoanFragment">

    <Button
        android:id="@+id/exit_btn"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:text="@string/salir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/acc_Btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/cuenta"
        app:layout_constraintBottom_toTopOf="@+id/exit_btn"
        app:layout_constraintEnd_toStartOf="@+id/cardBtn"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cardBtn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/tarjetas"
        app:layout_constraintBottom_toTopOf="@+id/exit_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/loan_number_text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="156dp"
        android:ems="10"
        android:hint="@string/numero_prestamo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pay_amount_text"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/monto_pago"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loan_number_text" />

    <Button
        android:id="@+id/ord_btn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:text="@string/ordinario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pay_amount_text" />

    <Button
        android:id="@+id/extra_btn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/extraordinario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ord_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>