<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountFragment">

    <Button
        android:id="@+id/exit_btn"
        android:layout_width="365dp"
        android:layout_height="50dp"
        android:text="@string/salir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/loan_Btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/prestamos"
        app:layout_constraintBottom_toTopOf="@+id/exit_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/card_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/tarjetas"
        app:layout_constraintBottom_toTopOf="@+id/exit_btn"
        app:layout_constraintEnd_toStartOf="@+id/loan_Btn"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/numero_cuenta"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mov_btn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="81dp"
        android:text="@string/movimientos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <Button
        android:id="@+id/watch_cards_btn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="81dp"
        android:text="@string/ver_tarjetas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mov_btn" />

    <Button
        android:id="@+id/tranfer_btn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="81dp"
        android:text="@string/ver_transferencias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/watch_cards_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>