<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LogingFragment">

    <fragment
        android:id="@+id/LogingFragment"
        android:name="com.example.sisepuede.FirstFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_loggin">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/AccFragment" />
    </fragment>
    <fragment
        android:id="@+id/AccFragment"
        android:name="com.example.sisepuede.SecondFragment"
        android:label="@string/cuenta"
        tools:layout="@layout/fragment_acc">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/LogingFragment" />
    </fragment>

    <fragment
        android:id="@+id/CardFragment"
        android:name="com.example.sisepuede.CardFragment"
        android:label="@string/tarjetas"
        tools:layout="@layout/fragment_card">
        >
        <action
            android:id="@+id/action_cardFragment_to_FirstFragment"
            app:destination="@id/LogingFragment" />
        <action
            android:id="@+id/action_cardFragment_to_accFragment"
            app:destination="@id/AccFragment" />
        <action
            android:id="@+id/action_cardFragment_to_loanFragment"
            app:destination="@id/LoanFragment" />
    </fragment>

    <fragment
        android:id="@+id/LoanFragment"
        android:name="com.example.sisepuede.CardFragment"
        android:label="@string/prestamos"
        tools:layout="@layout/fragment_loan">
        >
        <action
            android:id="@+id/action_LoanFragment_to_FirstFragment"
            app:destination="@id/LogingFragment" />
        <action
            android:id="@+id/action_LoanFragment_to_accFragment"
            app:destination="@id/AccFragment" />
        <action
            android:id="@+id/action_LoanFragment_to_cardFragment"
            app:destination="@id/CardFragment" />
    </fragment>

</navigation>